--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -299,231 +299,14 @@
                         </androidx.cardview.widget.CardView>
 
                     </LinearLayout>
-                    <LinearLayout
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/rvfolders"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:layout_marginStart="10dp"
-                        android:layout_marginEnd="10dp">
+                        android:layout_height="300dp"
+                        android:orientation="vertical"
+                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                        tools:listitem="@layout/folder"/>
 
-                        <androidx.cardview.widget.CardView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginStart= "10dp"
-                            android:layout_marginEnd= "10dp"
-                            android:layout_marginTop="2dp"
-                            android:layout_marginBottom="2dp"
-                            app:cardCornerRadius="15dp"
-                            app:cardBackgroundColor="@color/white"
-                            app:cardElevation="0dp">
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:orientation="horizontal">
-                                <LinearLayout
-                                    android:layout_width="100dp"
-                                    android:layout_height="wrap_content"
-                                    android:layout_weight="1"
-                                    android:orientation="vertical"
-                                    android:layout_margin="10dp">
-                                    <ImageView
-                                        android:layout_width="30dp"
-                                        android:layout_height="30dp"
-                                        android:src="@drawable/icons8_folder_128"/>
-                                    <TextView
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:text="20 items"
-                                        android:textStyle="bold"
-                                        android:textColor="@color/icon_gray"/>
-
-                                </LinearLayout>
-                                <LinearLayout
-                                    android:layout_width="5dp"
-                                    android:layout_height="match_parent"
-                                    android:background="#F7F6FD"
-                                    android:orientation="vertical">
-
-                                </LinearLayout>
-                                <LinearLayout
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:layout_weight="3"
-                                    android:orientation="vertical"
-                                    android:layout_gravity="center_vertical"
-                                    android:layout_margin="10dp">
-                                    <TextView
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:text="Music"
-                                        android:textStyle="bold"
-                                        android:textColor="@color/navy_blue"/>
-
-                                    <TextView
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:text="Created 25th September 2022"
-                                        android:textStyle="bold"
-                                        android:textColor="@color/icon_gray"/>
-
-                                </LinearLayout>
-
-                            </LinearLayout>
-                        </androidx.cardview.widget.CardView>
-
-
-
-                    </LinearLayout>
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:layout_marginStart="10dp"
-                        android:layout_marginEnd="10dp">
-
-                        <androidx.cardview.widget.CardView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginStart= "10dp"
-                            android:layout_marginEnd= "10dp"
-                            android:layout_marginTop="10dp"
-                            android:layout_marginBottom="2dp"
-                            app:cardCornerRadius="15dp"
-                            app:cardBackgroundColor="@color/white"
-                            app:cardElevation="0dp">
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:orientation="horizontal">
-                                <LinearLayout
-                                    android:layout_width="100dp"
-                                    android:layout_height="wrap_content"
-                                    android:layout_weight="1"
-                                    android:orientation="vertical"
-                                    android:layout_margin="10dp">
-                                    <ImageView
-                                        android:layout_width="30dp"
-                                        android:layout_height="30dp"
-                                        android:src="@drawable/icons8_folder_128"/>
-                                    <TextView
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:text="8 items"
-                                        android:textStyle="bold"
-                                        android:textColor="@color/icon_gray"/>
-
-                                </LinearLayout>
-                                <LinearLayout
-                                    android:layout_width="5dp"
-                                    android:layout_height="match_parent"
-                                    android:background="#F7F6FD"
-                                    android:orientation="vertical">
-
-                                </LinearLayout>
-                                <LinearLayout
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:layout_weight="3"
-                                    android:orientation="vertical"
-                                    android:layout_gravity="center_vertical"
-                                    android:layout_margin="10dp">
-                                    <TextView
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:text="Images"
-                                        android:textStyle="bold"
-                                        android:textColor="@color/navy_blue"/>
-
-                                    <TextView
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:text="Created 25th September 2022"
-                                        android:textStyle="bold"
-                                        android:textColor="@color/icon_gray"/>
-
-                                </LinearLayout>
-
-                            </LinearLayout>
-                        </androidx.cardview.widget.CardView>
-
-
-
-                    </LinearLayout>
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:layout_marginStart="10dp"
-                        android:layout_marginEnd="10dp">
-
-                        <androidx.cardview.widget.CardView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginStart= "10dp"
-                            android:layout_marginEnd= "10dp"
-                            android:layout_marginTop="10dp"
-                            android:layout_marginBottom="2dp"
-                            app:cardCornerRadius="15dp"
-                            app:cardBackgroundColor="@color/white"
-                            app:cardElevation="0dp">
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:orientation="horizontal">
-                                <LinearLayout
-                                    android:layout_width="100dp"
-                                    android:layout_height="wrap_content"
-                                    android:layout_weight="1"
-                                    android:orientation="vertical"
-                                    android:layout_margin="10dp">
-                                    <ImageView
-                                        android:layout_width="30dp"
-                                        android:layout_height="30dp"
-                                        android:src="@drawable/icons8_folder_128"/>
-                                    <TextView
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:text="20 items"
-                                        android:textStyle="bold"
-                                        android:textColor="@color/icon_gray"/>
-
-                                </LinearLayout>
-                                <LinearLayout
-                                    android:layout_width="5dp"
-                                    android:layout_height="match_parent"
-                                    android:background="#F7F6FD"
-                                    android:orientation="vertical">
-
-                                </LinearLayout>
-                                <LinearLayout
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:layout_weight="3"
-                                    android:orientation="vertical"
-                                    android:layout_gravity="center_vertical"
-                                    android:layout_margin="10dp">
-                                    <TextView
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:text="Pdfs"
-                                        android:textStyle="bold"
-                                        android:textColor="@color/navy_blue"/>
-
-                                    <TextView
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:text="Created 25th September 2022"
-                                        android:textStyle="bold"
-                                        android:textColor="@color/icon_gray"/>
-
-                                </LinearLayout>
-
-                            </LinearLayout>
-                        </androidx.cardview.widget.CardView>
-
-
-
-                    </LinearLayout>
 
                     <TextView
                         android:id="@+id/textView"
@@ -531,7 +314,7 @@
                         android:layout_height="wrap_content"
                         android:text="@{viewmodel.user.email}"
                         android:layout_gravity="center"
-                        android:textColor="@color/white"
+                        android:textColor="@color/black"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -546,6 +329,8 @@
                         app:layout_constraintEnd_toEndOf="@+id/textView"
                         app:layout_constraintStart_toStartOf="@+id/textView"
                         app:layout_constraintTop_toBottomOf="@+id/textView" />
+
+
                 </LinearLayout>
             </LinearLayout>
 
