--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -313,10 +313,10 @@
                             android:textSize="20dp"
                             android:textStyle="bold" />
                         <androidx.cardview.widget.CardView
+                            android:id="@+id/cardAddFolder"
                             android:layout_width="wrap_content"
                             android:layout_margin="4dp"
                             android:layout_height="wrap_content"
-                            android:onClick="@{()->viewmodel.insertFolder()}"
                             app:cardBackgroundColor="@color/cto_orange"
                             app:cardElevation="6dp"
                             app:cardCornerRadius="40dp">
@@ -342,7 +342,6 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_margin="4dp"
-                            android:onClick="@{()->viewmodel.insertFolder()}"
                             app:cardBackgroundColor="@color/gray"
                             app:cardCornerRadius="6dp">
 
