--- a/app/src/main/res/layout/add_folder_layout.xml
+++ b/app/src/main/res/layout/add_folder_layout.xml
@@ -66,7 +66,7 @@
             </com.google.android.material.textfield.TextInputLayout>
 
             <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/btnCreateStaff"
+                android:id="@+id/btnAddFolder"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="40dp"
