--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -150,9 +150,10 @@
                                     android:orientation="horizontal">
 
                                     <TextView
+                                        android:id="@+id/folder_count"
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
-                                        android:text="40"
+                                        android:text="0"
                                         android:textColor="@color/white"
                                         android:textSize="30dp"
                                         android:textStyle="bold" />
