--- a/app/src/main/res/layout/folder.xml
+++ b/app/src/main/res/layout/folder.xml
@@ -71,6 +71,22 @@
                     android:textColor="@color/icon_gray"/>
 
             </LinearLayout>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:gravity="bottom|center"
+                android:layout_marginBottom="15dp"
+                android:layout_marginEnd="10dp">
+                <ImageView
+                    android:id="@+id/btnInfo"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:src="@drawable/ic_baseline_next_plan_24"/>
+
+
+            </LinearLayout>
 
         </LinearLayout>
     </androidx.cardview.widget.CardView>
