--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -162,7 +162,7 @@
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
                                         android:layout_marginStart="5dp"
-                                        android:text="files "
+                                        android:text="folders "
                                         android:textColor="@color/white"
                                         android:textSize="20dp"
                                         android:textStyle="bold" />
@@ -377,7 +377,7 @@
                         android:layout_height="200dp"
                         android:layout_gravity="center"
                         android:gravity="center"
-                        android:text=" Oops! no files found :("
+                        android:text=" Oops! no folders found :("
                         android:textColor="@color/navy_blue"
                         android:textSize="24dp"
                         android:textStyle="bold" />
