--- a/app/src/main/res/layout/activity_folder_details.xml
+++ b/app/src/main/res/layout/activity_folder_details.xml
@@ -32,7 +32,7 @@
 
                 <!-- ToolBar widget -->
                 <androidx.appcompat.widget.Toolbar
-                    android:id="@+id/toolbar"
+                    android:id="@+id/toolbar2"
                     android:layout_marginTop="20dp"
                     android:layout_width="match_parent"
                     android:layout_height="?attr/actionBarSize"
