--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,7 @@
     <color name="cto_orange">#f75730</color>
     <color name="disabled_text">#66676A</color>
     <color name="page_background_color">#f7f6fd</color>
+    <color name="document_bg">#fff1eb</color>
+    <color name="image_bg">#e7fdf4</color>
+    <color name="music_bg">#fcf4fe</color>
 </resources>
