--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -51,14 +51,16 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:src="@drawable/login"/>
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/login"
-                    android:textSize="30sp"
-                    android:textStyle="bold"
                     android:layout_marginTop="10dp"
-                    android:textColor="@color/navy_blue"/>
+                    android:fontFamily="@font/poppins_medium"
+                    android:text="@string/login"
+                    android:textColor="@color/navy_blue"
+                    android:textSize="30sp"
+                    android:textStyle="bold" />
                 <EditText
                     android:id="@+id/etEmail"
                     android:layout_marginTop="20dp"
