--- a/app/src/main/res/layout/activity_folder_details.xml
+++ b/app/src/main/res/layout/activity_folder_details.xml
@@ -35,7 +35,7 @@
                     android:id="@+id/toolbar2"
                     android:layout_width="match_parent"
                     android:layout_height="?attr/actionBarSize"
-                    android:layout_marginTop="20dp"
+                    android:layout_marginTop="10dp"
                     android:background="@color/navy_blue"
                     android:elevation="0dp"
                     android:minHeight="?attr/actionBarSize"
@@ -51,12 +51,12 @@
 
 
                 <androidx.cardview.widget.CardView
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
                     android:layout_marginTop="10dp"
                     app:cardBackgroundColor="#D33D4C77"
                     app:cardCornerRadius="10dp"
-                    android:layout_marginRight="20dp"
+                    android:layout_marginRight="10dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toStartOf="@+id/cardView"
                     app:layout_constraintTop_toTopOf="parent">
@@ -79,8 +79,8 @@
 
                 <androidx.cardview.widget.CardView
                     android:id="@+id/cardView"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
                     android:layout_marginTop="10dp"
                     android:layout_marginEnd="9dp"
                     app:cardBackgroundColor="@color/icon_gray"
@@ -144,46 +144,43 @@
                     app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                     app:layout_constraintVertical_weight="1">
 
+
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="15dp"
-                        android:layout_marginTop="35dp"
-                        android:layout_marginEnd="15dp"
+                        android:layout_marginStart="10dp"
+                        android:layout_marginEnd="5dp"
+                        android:layout_marginTop="20dp"
+                        android:layout_marginBottom="5dp"
                         android:layout_gravity="center"
                         android:orientation="horizontal">
-
-                        <TextView
+                        <LinearLayout
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:layout_gravity="center"
+                            android:orientation="vertical"
+                            android:layout_gravity="bottom"
+                            android:layout_weight="1">
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:layout_marginBottom="0dp"
+                                android:text="0 items"
+                                android:textColor="@color/icon_gray"
+                                android:textStyle="bold" />
+                            <TextView
+                                android:id="@+id/folderName"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:text="Folder name"
+                                android:layout_marginTop="0dp"
+                                android:textColor="@color/navy_blue"
+                                android:textSize="18dp"
+                                android:textStyle="bold" />
 
-                            android:text="0 items"
-                            android:textColor="@color/icon_gray"
-                            android:textStyle="bold" />
+                        </LinearLayout>
 
-                    </LinearLayout>
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="15dp"
-                        android:layout_marginEnd="15dp"
-                        android:layout_marginBottom="10dp"
-                        android:layout_gravity="center"
-                        android:orientation="horizontal">
-
-                        <TextView
-                            android:id="@+id/folderName"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:layout_gravity="center"
-
-                            android:text="Folder name"
-                            android:textColor="@color/navy_blue"
-                            android:textSize="18dp"
-                            android:textStyle="bold" />
 
                         <ImageView
                             android:id="@+id/addFile"
@@ -201,8 +198,8 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="15dp"
-                        android:layout_marginEnd="15dp"
+                        android:layout_marginStart="10dp"
+                        android:layout_marginEnd="10dp"
                         android:layout_marginBottom="10dp"
                         android:layout_gravity="center"
                         android:orientation="horizontal">
