--- a/app/src/main/res/layout/single_month_layout.xml
+++ b/app/src/main/res/layout/single_month_layout.xml
@@ -71,6 +71,7 @@
                 android:textSize="20sp"
                 android:textStyle="bold" />
             <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rvSingleFiles"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
