--- a/app/src/main/res/layout/file.xml
+++ b/app/src/main/res/layout/file.xml
@@ -37,6 +37,7 @@
                     app:cardElevation="4dp">
 
                     <ImageView
+                        android:id="@+id/ivFileType"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:src="@drawable/ic_baseline_audio_file_24" />
